2006-05-26  Yen-Ju Chen <yjchenx at gmail>

    * Update to Io darcs 20060526.
      Try to make minimal change to make it easier to sync in the future.
    * Tested on GNUstep/Ubuntu/PPC with test_gnustep.io.

2006-05-26  Quentin Mathe <qmathe@club-internet.fr>

	Fixed compilation on GNUstep.
	* GNUmakefile.tool: Fixed typos.
	* IoLanguageEngine.h: Fixed wrong import statement, now looks for STEngine
	header in StepTalk headers and not anymore locally.

2006-05-26  Quentin Mathe <qmathe@club-internet.fr>

	This a special port of Io language to GNUstep done by Yen-Ju Chen.
    * ChangeLog:
    * GNUmakefile:
    * GNUmakefile.postamble:
    * GNUmakefile.tool:
    * Info.plist:
    * IoLanguageEngine.h:
    * IoLanguageEngine.m:
    * IoLanguageInfo.plist:
    * IoVM:
    * main.m:
    * README:
    * STEngine.h:
    * test_cocoa.io:
    * test_gnustep.io:

    * AAVector/GNUmakefile:
    * AAVector/IoAAVectorInit.c:
    * AAVector/IoBox.c:
    * AAVector/IoBox.h:
    * AAVector/IoVector.c:
    * AAVector/IoVector.h:
    * AAVector/Trans.h:
    * AAVector/Vector.c:
    * AAVector/Vector.h:

    * IoVM/_BSDLicense.txt:
    * IoVM/GNUmakefile:
    * IoVM/IoBlock.c:
    * IoVM/IoBlock.h:
    * IoVM/IoCall.c:
    * IoVM/IoCall.h:
    * IoVM/IoCFunction.c:
    * IoVM/IoCFunction.h:
    * IoVM/IoCollector.c:
    * IoVM/IoCollector.h:
    * IoVM/IoCompiler.c:
    * IoVM/IoCompiler.h:
    * IoVM/IoConfig.h:
    * IoVM/IoContext.h:
    * IoVM/IoCoroutine.c:
    * IoVM/IoCoroutine.h:
    * IoVM/IoDate.c:
    * IoVM/IoDate.h:
    * IoVM/IoDebugger.c:
    * IoVM/IoDebugger.h:
    * IoVM/IoDirectory.c:
    * IoVM/IoDirectory.h:
    * IoVM/IoDuration.c:
    * IoVM/IoDuration.h:
    * IoVM/IoDynLib.c:
    * IoVM/IoDynLib.h:
    * IoVM/IoFile.c:
    * IoVM/IoFile.h:
    * IoVM/IoFile_stat.c:
    * IoVM/IoFile_stat.h:
    * IoVM/IoLexer.c:
    * IoVM/IoLexer.h:
    * IoVM/IoList.c:
    * IoVM/IoList.h:
    * IoVM/IoMap.c:
    * IoVM/IoMap.h:
    * IoVM/IoMessage.c: