@@ -1,7 +1,7 @@
 include $(GNUSTEP_MAKEFILES)/common.make
 
 # Only for Darwin
-#ADDITIONAL_CFLAGS += -mdynamic-no-pic -falign-loops=16 -DSANE_POPEN
+ADDITIONAL_CFLAGS += -mdynamic-no-pic #-falign-loops=16
 ADDITIONAL_LDFLAGS +=
 ADDITIONAL_INCLUDE_DIRS += -Ibase -ISkipDB
 
