@@ -1,0 +1,18 @@
+# Additional flags to pass to the preprocessor
+ADDITIONAL_CPPFLAGS +=
+
+# Additional flags to pass to the Objective-C compiler
+ADDITIONAL_OBJCFLAGS += -Wall -Wno-import
+
+# Additional flags to pass to the C compiler
+ADDITIONAL_CFLAGS += -Wall 
+
+# Additional include directories the compiler should search
+ADDITIONAL_INCLUDE_DIRS += 
+
+# Additional LDFLAGS to pass to the linker
+ADDITIONAL_LDFLAGS += 
+
+# Additional library directories the linker should search
+ADDITIONAL_LIB_DIRS += 
+
