@@ -1,0 +1,224 @@
+/* 
+This software was developed as part of a project at MIT.
+ 
+ Copyright (c) 2005-2006 Russ Cox,
+ Massachusetts Institute of Technology
+ 
+ Permission is hereby granted, free of charge, to any person obtaining
+ a copy of this software and associated documentation files (the
+												 "Software"), to deal in the Software without restriction, including
+ without limitation the rights to use, copy, modify, merge, publish,
+ distribute, sublicense, and/or sell copies of the Software, and to
+ permit persons to whom the Software is furnished to do so, subject to
+ the following conditions:
+ 
+ The above copyright notice and this permission notice shall be
+ included in all copies or substantial portions of the Software.
+ 
+ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND,
+ EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF
+ MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND
+ NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE
+ LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION
+ OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION
+ WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
+ */
+ 
+#if defined(__FreeBSD__) && defined(__i386__) && __FreeBSD__ < 5
+#define NEEDX86CONTEXT 1
+#define SET setmcontext
+#define GET getmcontext
+#endif
+
+#if defined(__APPLE__) && defined(__i386__)
+#define NEEDX86CONTEXT 1
+#define SET _setmcontext
+#define GET _getmcontext
+#endif
+
+#if defined(__APPLE__) && !defined(__i386__)
+#define NEEDPOWERCONTEXT 1
+#define SET __setmcontext
+#define GET __getmcontext
+#endif
+
+#if defined(__linux__) && defined(__arm__)
+#define NEEDARMCONTEXT 1
+#define SET setmcontext
+#define GET getmcontext
+#endif
+
+#ifdef NEEDX86CONTEXT
+.globl SET
+SET:
+	movl	4(%esp), %eax
+
+	movl	8(%eax), %fs
+	movl	12(%eax), %es
+	movl	16(%eax), %ds
+	movl	76(%eax), %ss
+	movl	20(%eax), %edi
+	movl	24(%eax), %esi
+	movl	28(%eax), %ebp
+	movl	36(%eax), %ebx
+	movl	40(%eax), %edx
+	movl	44(%eax), %ecx
+
+	movl	72(%eax), %esp
+	pushl	60(%eax)	/* new %eip */
+	movl	48(%eax), %eax
+	ret
+
+.globl GET
+GET:
+	movl	4(%esp), %eax
+
+	movl	%fs, 8(%eax)
+	movl	%es, 12(%eax)
+	movl	%ds, 16(%eax)
+	movl	%ss, 76(%eax)
+	movl	%edi, 20(%eax)
+	movl	%esi, 24(%eax)
+	movl	%ebp, 28(%eax)
+	movl	%ebx, 36(%eax)
+	movl	%edx, 40(%eax)		 
+	movl	%ecx, 44(%eax)
+
+	movl	$1, 48(%eax)	/* %eax */
+	movl	(%esp), %ecx	/* %eip */
+	movl	%ecx, 60(%eax)
+	leal	4(%esp), %ecx	/* %esp */
+	movl	%ecx, 72(%eax)
+
+	movl	44(%eax), %ecx	/* restore %ecx */
+	movl	$0, %eax
+	ret
+#endif
+
+#ifdef NEEDPOWERCONTEXT
+/* get FPR and VR use flags with sc 0x7FF3 */
+/* get vsave with mfspr reg, 256 */
+
+.text
+.align 2
+
+.globl GET
+GET:				/* xxx: instruction scheduling */
+	mflr	r0
+	mfcr	r5
+	mfctr	r6
+	mfxer	r7
+	stw	r0, 0*4(r3)
+	stw	r5, 1*4(r3)
+	stw	r6, 2*4(r3)
+	stw	r7, 3*4(r3)
+
+	stw	r1, 4*4(r3)
+	stw	r2, 5*4(r3)
+	li	r5, 1			/* return value for setmcontext */
+	stw	r5, 6*4(r3)
+
+	stw	r13, (0+7)*4(r3)	/* callee-save GPRs */
+	stw	r14, (1+7)*4(r3)	/* xxx: block move */
+	stw	r15, (2+7)*4(r3)
+	stw	r16, (3+7)*4(r3)
+	stw	r17, (4+7)*4(r3)
+	stw	r18, (5+7)*4(r3)
+	stw	r19, (6+7)*4(r3)
+	stw	r20, (7+7)*4(r3)
+	stw	r21, (8+7)*4(r3)
+	stw	r22, (9+7)*4(r3)
+	stw	r23, (10+7)*4(r3)
+	stw	r24, (11+7)*4(r3)
+	stw	r25, (12+7)*4(r3)
+	stw	r26, (13+7)*4(r3)
+	stw	r27, (14+7)*4(r3)
+	stw	r28, (15+7)*4(r3)
+	stw	r29, (16+7)*4(r3)
+	stw	r30, (17+7)*4(r3)
+	stw	r31, (18+7)*4(r3)
+
+	li	r3, 0			/* return */
+	blr
+
+.globl SET
+SET:
+	lwz	r13, (0+7)*4(r3)	/* callee-save GPRs */
+	lwz	r14, (1+7)*4(r3)	/* xxx: block move */
+	lwz	r15, (2+7)*4(r3)
+	lwz	r16, (3+7)*4(r3)
+	lwz	r17, (4+7)*4(r3)
+	lwz	r18, (5+7)*4(r3)
+	lwz	r19, (6+7)*4(r3)
+	lwz	r20, (7+7)*4(r3)
+	lwz	r21, (8+7)*4(r3)
+	lwz	r22, (9+7)*4(r3)
+	lwz	r23, (10+7)*4(r3)
+	lwz	r24, (11+7)*4(r3)
+	lwz	r25, (12+7)*4(r3)
+	lwz	r26, (13+7)*4(r3)
+	lwz	r27, (14+7)*4(r3)
+	lwz	r28, (15+7)*4(r3)
+	lwz	r29, (16+7)*4(r3)
+	lwz	r30, (17+7)*4(r3)
+	lwz	r31, (18+7)*4(r3)
+
+	lwz	r1, 4*4(r3)
+	lwz	r2, 5*4(r3)
+
+	lwz	r0, 0*4(r3)
+	mtlr	r0
+	lwz	r0, 1*4(r3)
+	mtcr	r0			/* mtcrf 0xFF, r0 */
+	lwz	r0, 2*4(r3)
+	mtctr	r0
+	lwz	r0, 3*4(r3)
+	mtxer	r0
+
+	lwz	r3,	6*4(r3)
+	blr
+#endif
+
+#ifdef NEEDARMCONTEXT
+.globl GET
+GET:
+	str	r1, [r0,#4]
+	str	r2, [r0,#8]
+	str	r3, [r0,#12]
+	str	r4, [r0,#16]
+	str	r5, [r0,#20]
+	str	r6, [r0,#24]
+	str	r7, [r0,#28]
+	str	r8, [r0,#32]
+	str	r9, [r0,#36]
+	str	r10, [r0,#40]
+	str	r11, [r0,#44]
+	str	r12, [r0,#48]
+	str	r13, [r0,#52]
+	str	r14, [r0,#56]
+	/* store 1 as r0-to-restore */
+	mov	r1, #1
+	str	r1, [r0]
+	/* return 0 */
+	mov	r0, #0
+	mov	pc, lr
+
+.globl SET
+SET:
+	ldr	r1, [r0,#4]
+	ldr	r2, [r0,#8]
+	ldr	r3, [r0,#12]
+	ldr	r4, [r0,#16]
+	ldr	r5, [r0,#20]
+	ldr	r6, [r0,#24]
+	ldr	r7, [r0,#28]
+	ldr	r8, [r0,#32]
+	ldr	r9, [r0,#36]
+	ldr	r10, [r0,#40]
+	ldr	r11, [r0,#44]
+	ldr	r12, [r0,#48]
+	ldr	r13, [r0,#52]
+	ldr	r14, [r0,#56]
+	ldr	r0, [r0]
+	mov	pc, lr
+#endif
